# praktika

./: 1.cpp  10.cpp  11.cpp  2.cpp  3.cpp  4.cpp  5.cpp  7.cpp  8.cpp  CMakeLists.txt
6/: 1.cpp  2.cpp  3.cpp
9/: 1.cpp  2.cpp  F1.txt  F2.txt
