cmake_minimum_required(VERSION 3.31)
project(kriss)

set(CMAKE_CXX_STANDARD 20)

add_executable(kriss main.cpp
        1.cpp
        2.cpp
        3.cpp
        4.cpp
        5.cpp
        6/1.cpp
        6/2.cpp
        6/3.cpp
        7.cpp
        8.cpp
        9/1.cpp
        9/2.cpp
        10.cpp
        11.cpp)
